# rag-eval-harness

./: .env.example  .gitignore  CODEX.md  HANDOFF.md  README.md  pyproject.toml
docs/: architecture.md  cli-api-contract.md  coding-rules.md  evaluation-rules.md  future-roadmap.md  project-context.md  scope.md  testing-error-handling.md
eval/: questions.yaml
rag_eval/: __init__.py  client.py  main.py  metrics.py  report.py
tests/: test_dataset.py  test_metrics.py  test_report.py
